# PyMathTools

./: .gitignore  404.html  README.md  dev_requirements.txt  index.html  mkdocs.yml  pylintrc  pyproject.toml  setup.py  sitemap.xml  tox.ini
.github/workflows/: gh_actions.yml  gh_docs.yml  linters.yml  unittests.yml
.github/worksflow/: package-check.yaml  unittests.yaml
docs/: index.md  matrix.md  temperature.md
examples/: temperature_example.py
matrix/: index.html
pymath/: generic_matrix.py
pymath/functions/: __init__.py  temperature.py
pymath/instances/: __init__.py  temperature.py
pymath_tools/functions/: __init__.py  temperature.py
pymath_tools/instances/: __init__.py  exceptions.py  generic_matrix.py  temperature.py
src/pymath_tools/functions/: __init__.py
src/pymath_tools/instances/: __init__.py  generic_matrix.py  temperature.py
temperature/: index.html
unittests/: test_generic_matrix.py  test_matrix.py  test_temperature.py
